Mon Mar 12 21:47:51 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>

        * ace/OS_NS_stdio.inl:

          Fixed compilation errors on WinCE 5.0 builds.

Mon Mar 12 22:26:08 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/checked_iterator.h (ACE_make_checked_array_iterator):

          New function template that returns a checked iterator if
          supported by the platform (currently VC8 or better), and a
          pointer otherwise.

        * ace/Array_Map.cpp (ACE_Array_Map, grow, operator==):

          Call new ACE_make_checked_array_iterator<>() iterator factory
          function to generate destination iterator.  Addresses VC8
          "C4996" warnings when security related warnings are enabled.

        * ace/Makefile.am:
        * ace/ace.mpc:
        * ace/ace_for_tao.mpc:

          Added new ace/checked_iterator.h header to the appropriate
          header lists.

Mon Mar 12 21:15:46 UTC 2007  Carlos O'Ryan  <coryan@atdeesk.com>

        * tests/Reactor_Notify_Test.cpp:
          The test was verifying the behavior described in bug 2845.  I
          neglected to fix the test when we fixed the bug.  Mostly because
          I am stupid, but also because the test only worked as expected
          in a limited number of builds.
          This change should fix the test problems we are seeing on the
          scoreboard, but the only thing I can say for sure is:
          + I managed to reproduce the crash on my machine.
          + I understand why the test was crashing.
          + I believe the test was wrong and not the library.
          + I fixed the test and now valgrind is happy with it.

Mon Mar 12 17:55:18 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_stdio.inl (vsnprintf): Back out the attempt to use the
          new _vsnprintf_s() - it doesn't report the required string length
          when it exceeds maxlen and we need this info.
